workspace = { members = ["solutions/lc100_is_same_tree"] }
[package]
name = "leetcode-trees-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
clap = { version = "4.5.3", features = ["cargo"] }
serde = { version = "1.0.197", features = ["derive"], optional = true }
cargo-make = "0.37.10"

[dev-dependencies]
anyhow = "1.0.81"

[features]
serde = ["dep:serde"]
