[package]
name = "leetcode-trees-rs"
version = "0.1.122"
description = "A Rust library for Tree Node LeetCode problems."
keywords = ["leetcode", "library"]
homepage = "https://github.com/1kill2steal/leetcode-trees-rs"
repository = "https://github.com/1kill2steal/leetcode-trees-rs"
license = "MIT"
edition = "2021"
readme = "README.md"
include = ["src/**/*", "LICENSE.md", "README.md"]

[workspace]
members = ["solutions/*"]

[dependencies]
thiserror = "1.0.58"
clap = { version = "4.5.3", features = ["cargo"] }
serde = { version = "1.0.197", features = ["derive"], optional = true }
cargo-make = "0.37.10"

[dev-dependencies]
anyhow = "1.0.81"

[features]
serde = ["dep:serde"]
