[package]
name = "leetcode-trees-rs"
version = "0.1.142"
description = "A Rust library for Tree Node LeetCode problems."
keywords = ["leetcode", "library"]
homepage = "https://github.com/1kill2steal/leetcode-trees-rs"
repository = "https://github.com/1kill2steal/leetcode-trees-rs"
license = "MIT"
edition = "2021"
readme = "README.md"
include = ["src/**/*", "LICENSE.md", "README.md"]

[workspace]
members = ["solutions/*"]

[dependencies]
serde = { version = "1.0.201", features = ["derive"], optional = true }
cargo-make = "0.37.12"

[features]
serde = ["dep:serde"]
